<?xml version="1.0"?>
<package format="2">
  <name>grizzly_control</name>
  <version>0.4.2</version>
  <description>Clearpath Grizzly controller configurations</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/g/grizzly/issues</url>
  <url type="repository">https://github.com/g/grizzly</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>grizzly_description</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
