<?xml version="1.0"?>
<package format="2">
  <name>grizzly_description</name>
  <version>0.4.2</version>
  <description>Clearpath Grizzly URDF description</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <url type="bugtracker">https://github.com/g/grizzly/issues</url>
  <url type="repository">https://github.com/g/grizzly</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>pointgrey_camera_description</exec_depend>
  <exec_depend>lms1xx</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
