<?xml version="1.0"?>
<package>
  <name>grizzly_msgs</name>
  <version>0.0.1</version>
  <description>grizzly_msgs</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>message_runtime</run_depend>
</package>


