<?xml version="1.0"?>
<package format="2">
  <name>grizzly_msgs</name>
  <version>0.4.2</version>
  <description>Common messages for Grizzly.</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
