<?xml version="1.0"?>
<package format="2">
  <name>grizzly_navigation</name>
  <version>0.4.2</version>
  <description>Autonomous mapping and navigation demos for the Clearpath Grizzly</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/g/grizzly/issues</url>
  <url type="repository">https://github.com/g/grizzly</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>

  <export>
  </export>
</package>
